# ClanDestiny

./: .gitignore  CMakeLists.txt  ClanDestiny.sln  ClanDestiny.vcxproj  ClanDestiny.vcxproj.filters  design.md
Redist/: engine.cfg  runlog.txt
Source/: Clan.cpp  Clan.h  Game.h  GameGlobals.cpp  GameGlobals.h  Main.cpp  MainState.cpp  MainState.h  Map.cpp  Map.h  Render.cpp  Render.h  main.cpp
